--- a/app/src/main/res/layout/item_device_list.xml
+++ b/app/src/main/res/layout/item_device_list.xml
@@ -4,13 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/ib_mode"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:scaleType="fitCenter"
+    <TextView
+        android:id="@+id/device_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:layout_margin="16dp"/>
 
 </LinearLayout>
