--- a/app/src/main/res/layout/round_list.xml
+++ b/app/src/main/res/layout/round_list.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/ib_round"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:scaleType="fitCenter"
         android:layout_gravity="center_vertical"
         android:layout_margin="16dp"/>
 
